fix bootstrap container overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,31 +29,18 @@ body {
 /*  DEFAULT / GENERIC STYLING
 /*---------------------------------------------*/
 
-.container {
+section {
   height: 100vh;
-  padding: 2rem;
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
-}
-
-.section {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding:2rem;
+  p
 }
 
 .text-center {
   text-align: center !important;
 }
 
-.page-heading {
-  padding: 1rem 0rem;
-  font-size: 50px;
-  font-family: var(--heading-font);
-  font-weight: 500;
-}
-
-.page-subheading {
-  font-size: 18px;
+.section-title {
+  padding-bottom: 0;
 }
 
 .section-title h1:after {
@@ -61,7 +48,7 @@ body {
   position: relative;
   display: block;
   border-radius: 25px;
-  width: 80px;
+  width: 50px;
   height: 5px;
   background: var(--main-contrast);
 }
@@ -69,6 +56,18 @@ body {
 strong {
   font-weight: 500;
   font-size: 1.05rem;
+}
+
+p {
+  font-size: 1rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
 
 /*---------------------------------------------*/
@@ -347,7 +346,6 @@ strong {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 80%;
 }
 
 .about-list ul {
@@ -359,6 +357,7 @@ strong {
   font-weight: 100;
   padding: 0.5rem;
   padding-left: 0;
+  width: 100%;
 }
 
 .about-list li i {
@@ -431,9 +430,40 @@ strong {
   }
 }
 
+.resume-item h4 {
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.education-item::after {
+  border-left: 2px solid var(--main-contrast);
+}
+
+.resume-date {
+  padding-left: 1rem;
+  font-weight: 600;
+}
+
 /*---------------------------------------------*/
 /*  MEDIA QUERIES
 /*---------------------------------------------*/
+
+@media (max-width: 1440px) {
+  section {
+    height: auto;
+  }
+
+  .about-image {
+    display: flex !important;
+    justify-content: center;
+  }
+
+  .about-image img {
+    width: 280px;
+    height: 280px;
+    margin: 0px auto;
+  }
+}
 
 @media (min-width: 1200px) {
   /* 1200 px or higher header populates left side 
@@ -449,6 +479,10 @@ strong {
   .header {
     left: -100%;
   }
+
+  .about-image img {
+    width: 280px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -456,13 +490,38 @@ strong {
     flex-direction: column;
     justify-content: center;
   }
+
+  .about-image {
+    display: flex !important;
+    justify-content: center;
+  }
+
+  .about-image img {
+    width: 500px;
+    height: auto;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    margin: 0px auto;
+  }
 }
 @media (max-width: 450px) {
-  .home h1 {
+  h1 {
     font-size: 40px;
   }
 
-  .home h3 {
-    font-size: 25px;
+  h3 {
+    font-size: 20px;
+  }
+
+  .about-image img {
+    width: 300px;
+  }
+
+  .skill-percent::before {
+    display: none;
+  }
+
+  .skill-percent::after {
+    display: none;
   }
 }
